// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRangePicker icons Gitt at ArrowIcon skal rendres Når det brukes optional Prop className Så rendres det riktig ikon med custom className 1`] = `
<span>
  <svg
    aria-hidden="true"
    class="hnds-style-icon custom-classname-1"
    data-analyticsid="icon"
    fill="black"
    focusable="false"
    height="36"
    role="presentation"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="m27.075 9.718-1.443 1.739L35.636 22.77H8.456v2.46h27.18L25.632 36.539l1.443 1.742 12.47-14.28-12.47-14.283Z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker icons Gitt at HeaderNavIcon skal rendres Når det brukes direction next Så rendres det riktig svgIcon og riktig className 1`] = `
<span
  class="DayPickerNavigation_rightButton__horizontalDefault custom-classname-4"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon"
    data-analyticsid="icon"
    fill="#126F87"
    focusable="false"
    height="36"
    role="presentation"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M17.885 32.577l1.779 1.793 10.451-10.371L19.664 13.63l-1.779 1.793 8.644 8.576z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker icons Gitt at HeaderNavIcon skal rendres Når det brukes direction prev Så rendres det riktig svgIcon og riktig className 1`] = `
<span
  class="DayPickerNavigation_leftButton__horizontalDefault custom-classname-3"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon"
    data-analyticsid="icon"
    fill="#126F87"
    focusable="false"
    height="36"
    role="presentation"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M30.115 32.577l-1.779 1.793-10.451-10.371L28.336 13.63l1.779 1.793-8.644 8.576z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker icons Gitt at InputIcon skal rendres Når det brukes optional Prop className Så rendres det riktig ikon med custom className 1`] = `
<span>
  <svg
    aria-hidden="true"
    class="hnds-style-icon custom-classname-2"
    data-analyticsid="icon"
    fill="black"
    focusable="false"
    height="36"
    role="presentation"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M38.887 16.71H8.6v-6.197h3.862v1.17c0 1.223.994 2.216 2.216 2.216a2.218 2.218 0 002.215-2.215v-1.171h13.582v1.17c0 1.223.994 2.216 2.215 2.216a2.218 2.218 0 002.216-2.215v-1.171h3.982v6.197zM8.6 34.46h30.288V17.974H8.6V34.46zm5.125-26.17a.953.953 0 011.905 0v3.394a.953.953 0 01-1.905 0V8.289zm18.013 0a.953.953 0 011.905 0v3.394a.953.953 0 01-1.905 0V8.289zm3.168.96v-.96a2.218 2.218 0 00-2.216-2.216 2.218 2.218 0 00-2.215 2.215v.96H16.892v-.96a2.218 2.218 0 00-2.215-2.215 2.218 2.218 0 00-2.216 2.215v.96H7.336v26.475h32.815V9.249h-5.246zM27.67 28.292a1.508 1.508 0 100-3.016 1.508 1.508 0 000 3.016z"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;
